# vai-samples

10-mnist/: CMakeLists.txt  compile_commands.json  spirvHelpers.cpp  test.cpp  vulkanApp.cpp  vulkanApp.h
10-mnist/.cache/clangd/index/: error.h.A650E74D5F035E1C.idx  jsonParser.cpp.974B1C8450EE3899.idx  jsonParser.h.F3BD4B7ABCC087E0.idx  main.cpp.00BDF765F3E7F3A9.idx  neuralNet.h.CD825AB89D07E54E.idx  neuralNodes.h.536ADF70BCDA13E9.idx  spirvHelpers.cpp.177C99A244602428.idx  stb_image.cpp.A24FB213FEC56225.idx  templateHelper.h.556192C689336155.idx  tensor.h.C323AD553D6AC12A.idx  test.cpp.FF81AD0DBBC60885.idx  timeChecker.hpp.BDC230FE911DA2C8.idx  vulkanApp.cpp.C3D592595B0CE5A5.idx  vulkanApp.h.07DB4DE4B48D5F4B.idx
python_ref/: resnet34.py
